--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Creately Whiteboard Showcase</title>
+    <title>CBAA Whiteboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -12,15 +12,12 @@
     >
     <style>
       :root {
-        --bg: #f6efe7;
-        --bg-2: #e7f0ea;
-        --ink: #1b1b1b;
-        --muted: #5a5248;
-        --accent: #e26a3a;
-        --accent-2: #0f6f64;
-        --card: #fff7f0;
-        --stroke: rgba(27, 27, 27, 0.12);
-        --shadow: 0 26px 60px rgba(27, 27, 27, 0.12);
+        --ink: #0b1326;
+        --muted: #3f4f70;
+        --accent: #0b1d3a;
+        --card: rgba(255, 255, 255, 0.9);
+        --stroke: rgba(11, 29, 58, 0.18);
+        --shadow: 0 30px 80px rgba(5, 16, 34, 0.22);
       }
 
       * {
@@ -31,9 +28,7 @@
         margin: 0;
         font-family: "Space Grotesk", system-ui, -apple-system, "Segoe UI", sans-serif;
         color: var(--ink);
-        background: radial-gradient(1200px 700px at 8% 10%, #fff4e7 0%, transparent 60%),
-          radial-gradient(900px 600px at 90% 5%, #e6f7f1 0%, transparent 60%),
-          linear-gradient(160deg, var(--bg), var(--bg-2));
+        background: linear-gradient(140deg, #ffffff 0%, #e6eeff 38%, #0b1d3a 100%);
         min-height: 100vh;
         position: relative;
         overflow-x: hidden;
@@ -50,192 +45,72 @@
       }
 
       body::before {
-        width: 420px;
-        height: 420px;
-        background: rgba(226, 106, 58, 0.12);
-        top: -120px;
-        right: -140px;
+        width: 520px;
+        height: 520px;
+        background: rgba(11, 29, 58, 0.18);
+        top: -180px;
+        right: -200px;
       }
 
       body::after {
-        width: 300px;
-        height: 300px;
-        background: rgba(15, 111, 100, 0.12);
-        bottom: 60px;
-        left: -120px;
+        width: 360px;
+        height: 360px;
+        background: rgba(255, 255, 255, 0.35);
+        bottom: 40px;
+        left: -140px;
       }
 
       .page {
         position: relative;
         z-index: 1;
-        max-width: 1150px;
+        max-width: 1320px;
         margin: 0 auto;
-        padding: 48px 24px 80px;
+        padding: 40px 24px 72px;
       }
 
       header {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        gap: 24px;
-        margin-bottom: 48px;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 32px;
       }
 
-      .logo {
-        display: inline-flex;
-        align-items: center;
-        gap: 12px;
-        font-weight: 700;
-        letter-spacing: 0.04em;
-      }
-
-      .logo-mark {
-        width: 44px;
-        height: 44px;
-        border-radius: 14px;
-        background: linear-gradient(135deg, var(--accent), #f0a24f);
+      .agency-mark {
         display: grid;
-        place-items: center;
-        color: #fff;
-        font-weight: 700;
+        gap: 6px;
+        letter-spacing: 0.18em;
+        text-transform: uppercase;
       }
 
-      .pill {
-        padding: 10px 18px;
-        border-radius: 999px;
-        border: 1px solid var(--stroke);
-        background: rgba(255, 255, 255, 0.7);
-        font-size: 14px;
-      }
-
-      .hero {
-        display: grid;
-        grid-template-columns: minmax(0, 1.1fr) minmax(0, 0.9fr);
-        gap: 40px;
-        align-items: center;
-        margin-bottom: 48px;
-      }
-
-      .hero h1 {
+      .agency-short {
         font-family: "Fraunces", serif;
-        font-size: clamp(36px, 4vw, 54px);
-        line-height: 1.05;
-        margin: 0 0 16px;
+        font-size: clamp(40px, 6vw, 64px);
+        letter-spacing: 0.24em;
       }
 
-      .hero p {
-        margin: 0 0 24px;
-        font-size: 18px;
+      .agency-long {
+        font-size: clamp(14px, 2.2vw, 18px);
         color: var(--muted);
-      }
-
-      .cta-row {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 16px;
-        align-items: center;
-      }
-
-      .btn {
-        display: inline-flex;
-        align-items: center;
-        gap: 10px;
-        padding: 14px 22px;
-        border-radius: 999px;
-        border: 1px solid transparent;
-        background: var(--accent);
-        color: #fff;
-        font-weight: 600;
-        text-decoration: none;
-        box-shadow: 0 16px 24px rgba(226, 106, 58, 0.24);
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
-      }
-
-      .btn:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 18px 32px rgba(226, 106, 58, 0.32);
-      }
-
-      .btn.secondary {
-        background: transparent;
-        color: var(--ink);
-        border-color: var(--stroke);
-        box-shadow: none;
-      }
-
-      .hero-card {
-        background: var(--card);
-        border: 1px solid var(--stroke);
-        border-radius: 28px;
-        padding: 28px;
-        box-shadow: var(--shadow);
-        position: relative;
-        overflow: hidden;
-      }
-
-      .hero-card::after {
-        content: "";
-        position: absolute;
-        width: 180px;
-        height: 180px;
-        border-radius: 50%;
-        background: rgba(15, 111, 100, 0.12);
-        top: -40px;
-        right: -40px;
-      }
-
-      .stat {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 12px 0;
-        border-bottom: 1px dashed var(--stroke);
-        font-size: 15px;
-      }
-
-      .stat:last-child {
-        border-bottom: none;
-      }
-
-      .stat strong {
-        font-size: 20px;
       }
 
       .board {
-        background: #fff;
+        background: var(--card);
         border-radius: 32px;
-        padding: 24px;
+        padding: 20px;
         border: 1px solid var(--stroke);
         box-shadow: var(--shadow);
-        margin-bottom: 40px;
-      }
-
-      .board-header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 16px;
-        margin-bottom: 18px;
-      }
-
-      .board-header h2 {
-        margin: 0;
-        font-size: 24px;
-      }
-
-      .board-meta {
-        font-size: 14px;
-        color: var(--muted);
+        margin-bottom: 24px;
       }
 
       .frame {
         position: relative;
         width: 100%;
-        padding-top: 66%;
+        height: clamp(520px, 75vh, 900px);
         border-radius: 24px;
-        background: linear-gradient(135deg, rgba(15, 111, 100, 0.08), rgba(226, 106, 58, 0.08));
+        background: rgba(255, 255, 255, 0.65);
         overflow: hidden;
-        border: 1px solid rgba(27, 27, 27, 0.08);
+        border: 1px solid rgba(11, 29, 58, 0.2);
       }
 
       .frame iframe {
@@ -244,31 +119,6 @@
         width: 100%;
         height: 100%;
         border: 0;
-      }
-
-      .features {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        gap: 18px;
-      }
-
-      .feature {
-        background: rgba(255, 255, 255, 0.8);
-        border-radius: 22px;
-        padding: 18px 20px;
-        border: 1px solid var(--stroke);
-        min-height: 140px;
-      }
-
-      .feature h3 {
-        margin: 0 0 10px;
-        font-size: 18px;
-      }
-
-      .feature p {
-        margin: 0;
-        color: var(--muted);
-        font-size: 15px;
       }
 
       .reveal {
@@ -284,20 +134,12 @@
 
       @media (max-width: 980px) {
         header {
-          flex-direction: column;
-          align-items: flex-start;
-        }
-
-        .hero {
-          grid-template-columns: 1fr;
-        }
-
-        .features {
-          grid-template-columns: 1fr;
+          text-align: left;
+          justify-content: flex-start;
         }
 
         .frame {
-          padding-top: 80%;
+          height: clamp(420px, 65vh, 720px);
         }
       }
     </style>
@@ -305,49 +147,13 @@
   <body>
     <div class="page">
       <header class="reveal">
-        <div class="logo">
-          <span class="logo-mark">CW</span>
-          <span>Creately Workspace</span>
+        <div class="agency-mark">
+          <div class="agency-short">CBAA</div>
+          <div class="agency-long">CLANS BORDER AFFAIRS AGENCY</div>
         </div>
-        <div class="pill">Live whiteboard showcase</div>
       </header>
 
-      <section class="hero">
-        <div class="reveal">
-          <h1>Plan, map, and ship ideas together in a single visual space.</h1>
-          <p>
-            This lightweight showcase frames your interactive board with a clear story,
-            crisp typography, and a warm studio palette.
-          </p>
-          <div class="cta-row">
-            <a class="btn" href="#board">Explore the board</a>
-            <a class="btn secondary" href="https://app.creately.com" target="_blank" rel="noreferrer">Open Creately</a>
-          </div>
-        </div>
-        <div class="hero-card reveal">
-          <div class="stat">
-            <span>Collaboration ready</span>
-            <strong>24/7</strong>
-          </div>
-          <div class="stat">
-            <span>Idea capture modes</span>
-            <strong>08</strong>
-          </div>
-          <div class="stat">
-            <span>Project clarity</span>
-            <strong>High</strong>
-          </div>
-          <p style="margin: 18px 0 0; color: var(--muted);">
-            Show the canvas in context, with room to add notes, links, and outcomes around it.
-          </p>
-        </div>
-      </section>
-
       <section id="board" class="board reveal">
-        <div class="board-header">
-          <h2>Interactive Whiteboard</h2>
-          <div class="board-meta">Tap, zoom, and explore in place</div>
-        </div>
         <div class="frame">
           <iframe
             src="https://app.creately.com/d/YfB8xAKyFhJ/edit"
@@ -357,21 +163,6 @@
             title="Creately Whiteboard"
             sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-top-navigation-to-custom-protocols allow-forms allow-popups allow-popups-to-escape-sandbox allow-pointer-lock allow-modals allow-downloads"
           ></iframe>
-        </div>
-      </section>
-
-      <section class="features">
-        <div class="feature reveal">
-          <h3>Focused layout</h3>
-          <p>Keep the board central while supporting context sits neatly around it.</p>
-        </div>
-        <div class="feature reveal">
-          <h3>Warm, modern tone</h3>
-          <p>Soft gradients and bold type balance clarity with personality.</p>
-        </div>
-        <div class="feature reveal">
-          <h3>Ready to extend</h3>
-          <p>Add project briefs, team notes, or client links in minutes.</p>
         </div>
       </section>
     </div>
